{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 15666,
  "lineage": "4973d4c3-5142-03bc-1083-9a38770bd610",
  "resources": [
    {
      "module": "module.ami",
      "mode": "data",
      "type": "aws_subnet",
      "name": "db-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-073eb007b783de4ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "available_ip_address_count": 248,
            "cidr_block": "10.60.20.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "aws_subnet/db-subnet1"
                ]
              }
            ],
            "id": "subnet-073eb007b783de4ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "aws_subnet/db-subnet1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          }
        }
      ]
    },
    {
      "module": "module.ami",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f682fb0d11c2ae31",
            "arn": "arn:aws:ec2:ca-central-1:891377163278:instance/i-067eaa535924c53fc",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance-profile-for-ec2-SSM,S3CICD",
            "id": "i-067eaa535924c53fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02ce84302e8eaf70f",
            "private_dns": "ip-10-60-20-108.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.60.20.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b03629f973b76a71",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073eb007b783de4ef",
            "tags": {
              "Name": "bastion",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "bastion",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05cdfcf9e74c519c3"
            ]
          },
          "dependencies": [
            "module.ami.data.aws_subnet.db-subnet1",
            "module.iam.aws_iam_instance_profile.instance-profile",
            "module.iam.aws_iam_role.codebuild-role",
            "module.iam.aws_iam_role.iam-role",
            "module.iam.aws_iam_role_policy.iam-policy",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "13467d4a",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f682fb0d11c2ae31",
            "arn": "arn:aws:ec2:ca-central-1:891377163278:instance/i-0ddad05323c033e15",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance-profile-for-ec2-SSM,S3CICD",
            "id": "i-0ddad05323c033e15",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-039e002986ec7d21d",
            "private_dns": "ip-10-60-20-160.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.60.20.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-073e98a3714aca9a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073eb007b783de4ef",
            "tags": {
              "Name": "bastion",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "bastion",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08d3a5802ba1e59ac"
            ]
          },
          "dependencies": [
            "module.ami.data.aws_subnet.db-subnet1",
            "module.iam.aws_iam_instance_profile.instance-profile",
            "module.iam.aws_iam_role.codebuild-role",
            "module.iam.aws_iam_role.iam-role",
            "module.iam.aws_iam_role_policy.iam-policy",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "7fb15fd1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f682fb0d11c2ae31",
            "arn": "arn:aws:ec2:ca-central-1:891377163278:instance/i-0359007a8186b90d4",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance-profile-for-ec2-SSM,S3CICD",
            "id": "i-0359007a8186b90d4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a42ec6eaf2cc4534",
            "private_dns": "ip-10-60-20-88.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.60.20.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04fc179c916d441cc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073eb007b783de4ef",
            "tags": {
              "Name": "bastion",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "bastion",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058676b8b66ead834"
            ]
          },
          "dependencies": [
            "module.ami.data.aws_subnet.db-subnet1",
            "module.iam.aws_iam_instance_profile.instance-profile",
            "module.iam.aws_iam_role.codebuild-role",
            "module.iam.aws_iam_role.iam-role",
            "module.iam.aws_iam_role_policy.iam-policy",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "d1c6ee56",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f682fb0d11c2ae31",
            "arn": "arn:aws:ec2:ca-central-1:891377163278:instance/i-08640404124a3c1d8",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance-profile-for-ec2-SSM,S3CICD",
            "id": "i-08640404124a3c1d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06cb22c643a78759d",
            "private_dns": "ip-10-60-20-221.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.60.20.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04a6748a94aa7e511",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073eb007b783de4ef",
            "tags": {
              "Name": "bastion",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "bastion",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-093a7891ef0049af5"
            ]
          },
          "dependencies": [
            "module.ami.data.aws_subnet.db-subnet1",
            "module.iam.aws_iam_instance_profile.instance-profile",
            "module.iam.aws_iam_role.codebuild-role",
            "module.iam.aws_iam_role.iam-role",
            "module.iam.aws_iam_role_policy.iam-policy",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-0c68e495a0037c195",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "available_ip_address_count": 1014,
            "cidr_block": "10.60.4.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "aws_subnet/private-subnet1"
                ]
              }
            ],
            "id": "subnet-0c68e495a0037c195",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "aws_subnet/private-subnet1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          }
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-0bbb71f2b91294b95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "available_ip_address_count": 1015,
            "cidr_block": "10.60.8.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "aws_subnet/private-subnet2"
                ]
              }
            ],
            "id": "subnet-0bbb71f2b91294b95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "aws_subnet/private-subnet2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          }
        }
      ]
    },
    {
      "module": "module.build",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-09868ae517cc61619",
            "description": "Security group with no filtering, allows all inbound and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09868ae517cc61619",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all_traffic",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.hellowaws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db-cache",
      "mode": "data",
      "type": "aws_subnet",
      "name": "db-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-073eb007b783de4ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "available_ip_address_count": 248,
            "cidr_block": "10.60.20.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "aws_subnet/db-subnet1"
                ]
              }
            ],
            "id": "subnet-073eb007b783de4ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "aws_subnet/db-subnet1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          }
        }
      ]
    },
    {
      "module": "module.db-cache",
      "mode": "data",
      "type": "aws_subnet",
      "name": "db-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-06ab15188d1adff58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.60.21.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "aws_subnet/db-subnet2"
                ]
              }
            ],
            "id": "subnet-06ab15188d1adff58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "aws_subnet/db-subnet2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          }
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "data",
      "type": "aws_security_group",
      "name": "app-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-0dfb7d14a1b4d1c1e",
            "description": "Allow HTTP and HTTPS for World",
            "filter": [
              {
                "name": "group-id",
                "values": [
                  "sg-0dfb7d14a1b4d1c1e"
                ]
              }
            ],
            "id": "sg-0dfb7d14a1b4d1c1e",
            "name": "app-elb-sg:20240612-0250",
            "tags": {
              "Name": "aws_security_group/app-elb-sg",
              "createDate": "20240612-0250",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "data",
      "type": "aws_security_group",
      "name": "web-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-01bc9587271ce8a19",
            "description": "Allow HTTP and HTTPS for World",
            "filter": [
              {
                "name": "group-id",
                "values": [
                  "sg-01bc9587271ce8a19"
                ]
              }
            ],
            "id": "sg-01bc9587271ce8a19",
            "name": "web-elb-sg:20240612-0250",
            "tags": {
              "Name": "aws_security_group/web-elb-sg",
              "createDate": "20240612-0250",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-0c68e495a0037c195",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "available_ip_address_count": 1015,
            "cidr_block": "10.60.4.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "aws_subnet/private-subnet1"
                ]
              }
            ],
            "id": "subnet-0c68e495a0037c195",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "aws_subnet/private-subnet1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          }
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-0bbb71f2b91294b95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "available_ip_address_count": 1015,
            "cidr_block": "10.60.8.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "aws_subnet/private-subnet2"
                ]
              }
            ],
            "id": "subnet-0bbb71f2b91294b95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "aws_subnet/private-subnet2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          }
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-06f87dcd78cd87423",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "available_ip_address_count": 249,
            "cidr_block": "10.60.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "aws_subnet/public-subnet1"
                ]
              }
            ],
            "id": "subnet-06f87dcd78cd87423",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "aws_subnet/public-subnet1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          }
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-003dc583c86d18f91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "available_ip_address_count": 249,
            "cidr_block": "10.60.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "aws_subnet/public-subnet2"
                ]
              }
            ],
            "id": "subnet-003dc583c86d18f91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "aws_subnet/public-subnet2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          }
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "data",
      "type": "aws_vpc",
      "name": "hellowaws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:vpc/vpc-0572e446a81c51fd6",
            "cidr_block": "10.60.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b68d1599bef88da6",
                "cidr_block": "10.60.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-07144a5022c83121e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "aws_vpc/hellowaws-vpc"
                ]
              }
            ],
            "id": "vpc-0572e446a81c51fd6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-096b92ba15276300f",
            "owner_id": "891377163278",
            "tags": {
              "Name": "aws_vpc/hellowaws-vpc",
              "createDate": "20240612",
              "owner": "ktd-admin"
            }
          }
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "App-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:loadbalancer/app/App-elb/e0836567b0ee22f4",
            "arn_suffix": "app/App-elb/e0836567b0ee22f4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-App-elb-1659180538.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:loadbalancer/app/App-elb/e0836567b0ee22f4",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "App-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dfb7d14a1b4d1c1e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bbb71f2b91294b95"
              },
              {
                "subnet_id": "subnet-0c68e495a0037c195"
              }
            ],
            "subnets": [
              "subnet-0bbb71f2b91294b95",
              "subnet-0c68e495a0037c195"
            ],
            "tags": {
              "Name": "aws_lb/App-elb",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_lb/App-elb",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "module.elb.data.aws_security_group.app-elb-sg",
            "module.elb.data.aws_subnet.private-subnet1",
            "module.elb.data.aws_subnet.private-subnet2",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Web-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:loadbalancer/app/Web-elb/f04572fe93c80245",
            "arn_suffix": "app/Web-elb/f04572fe93c80245",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Web-elb-1313647095.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:loadbalancer/app/Web-elb/f04572fe93c80245",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Web-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01bc9587271ce8a19"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003dc583c86d18f91"
              },
              {
                "subnet_id": "subnet-06f87dcd78cd87423"
              }
            ],
            "subnets": [
              "subnet-003dc583c86d18f91",
              "subnet-06f87dcd78cd87423"
            ],
            "tags": {
              "Name": "aws_lb/Web-elb",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_lb/Web-elb",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "module.elb.data.aws_security_group.web-elb-sg",
            "module.elb.data.aws_subnet.public-subnet1",
            "module.elb.data.aws_subnet.public-subnet2",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app-elb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:listener/app/App-elb/e0836567b0ee22f4/58a4a1ab9129aca3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/App-TG20240612-0250/d4681a21e77ecd57",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:listener/app/App-elb/e0836567b0ee22f4/58a4a1ab9129aca3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:loadbalancer/app/App-elb/e0836567b0ee22f4",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "aws_lb_listener/app-elb-listener",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_lb_listener/app-elb-listener",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_lb.App-elb",
            "module.elb.aws_lb_target_group.app-tg",
            "module.elb.data.aws_security_group.app-elb-sg",
            "module.elb.data.aws_subnet.private-subnet1",
            "module.elb.data.aws_subnet.private-subnet2",
            "module.elb.data.aws_vpc.hellowaws-vpc",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-elb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:listener/app/Web-elb/f04572fe93c80245/239f171e336d8901",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Forbidden. Only accessible through the cloud front",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:listener/app/Web-elb/f04572fe93c80245/239f171e336d8901",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:loadbalancer/app/Web-elb/f04572fe93c80245",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "aws_lb_listener/web-elb-listener",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_lb_listener/web-elb-listener",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_lb.Web-elb",
            "module.elb.data.aws_security_group.web-elb-sg",
            "module.elb.data.aws_subnet.public-subnet1",
            "module.elb.data.aws_subnet.public-subnet2",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "web-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/Web-TG20240612-0250/0114c93877fe581f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:listener-rule/app/Web-elb/f04572fe93c80245/239f171e336d8901/ae12251fa2d789db",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "my-header",
                    "values": [
                      "hellowaws"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:listener-rule/app/Web-elb/f04572fe93c80245/239f171e336d8901/ae12251fa2d789db",
            "listener_arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:listener/app/Web-elb/f04572fe93c80245/239f171e336d8901",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_lb.Web-elb",
            "module.elb.aws_lb_listener.web-elb-listener",
            "module.elb.aws_lb_target_group.web-tg",
            "module.elb.data.aws_security_group.web-elb-sg",
            "module.elb.data.aws_subnet.public-subnet1",
            "module.elb.data.aws_subnet.public-subnet2",
            "module.elb.data.aws_vpc.hellowaws-vpc",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/App-TG20240612-0250/d4681a21e77ecd57",
            "arn_suffix": "targetgroup/App-TG20240612-0250/d4681a21e77ecd57",
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/App-TG20240612-0250/d4681a21e77ecd57",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "App-TG20240612-0250",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "aws_lb_target_group/app-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_lb_target_group/app-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.elb.data.aws_vpc.hellowaws-vpc",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "7909084a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/App-TG20240612-0149/77a5d0316f7a0086",
            "arn_suffix": "targetgroup/App-TG20240612-0149/77a5d0316f7a0086",
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/App-TG20240612-0149/77a5d0316f7a0086",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "App-TG20240612-0149",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "aws_lb_target_group/app-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_lb_target_group/app-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.elb.data.aws_vpc.hellowaws-vpc",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "a53043e4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/App-TG20240612-0207/fc2a4c80be5e3b67",
            "arn_suffix": "targetgroup/App-TG20240612-0207/fc2a4c80be5e3b67",
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/App-TG20240612-0207/fc2a4c80be5e3b67",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "App-TG20240612-0207",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "aws_lb_target_group/app-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_lb_target_group/app-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.elb.data.aws_vpc.hellowaws-vpc",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "f91a369d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/App-TG20240612-0236/b782fa80f670b839",
            "arn_suffix": "targetgroup/App-TG20240612-0236/b782fa80f670b839",
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/App-TG20240612-0236/b782fa80f670b839",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ca-central-1:891377163278:loadbalancer/app/App-elb/e0836567b0ee22f4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "App-TG20240612-0236",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "aws_lb_target_group/app-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_lb_target_group/app-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.elb.data.aws_vpc.hellowaws-vpc",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/Web-TG20240612-0250/0114c93877fe581f",
            "arn_suffix": "targetgroup/Web-TG20240612-0250/0114c93877fe581f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/Web-TG20240612-0250/0114c93877fe581f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Web-TG20240612-0250",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "aws_lb_target_group/web-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_lb_target_group/web-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.elb.data.aws_vpc.hellowaws-vpc",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "1b6d39fc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/Web-TG20240612-0207/8b96dfce531fa9e9",
            "arn_suffix": "targetgroup/Web-TG20240612-0207/8b96dfce531fa9e9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/Web-TG20240612-0207/8b96dfce531fa9e9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Web-TG20240612-0207",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "aws_lb_target_group/web-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_lb_target_group/web-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.elb.data.aws_vpc.hellowaws-vpc",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "2c6280d1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/Web-TG20240612-0236/495607bcfb11646d",
            "arn_suffix": "targetgroup/Web-TG20240612-0236/495607bcfb11646d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/Web-TG20240612-0236/495607bcfb11646d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ca-central-1:891377163278:loadbalancer/app/Web-elb/f04572fe93c80245"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Web-TG20240612-0236",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "aws_lb_target_group/web-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_lb_target_group/web-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.elb.data.aws_vpc.hellowaws-vpc",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "d4268765",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/Web-TG20240612-0149/76af2941bbad7577",
            "arn_suffix": "targetgroup/Web-TG20240612-0149/76af2941bbad7577",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:891377163278:targetgroup/Web-TG20240612-0149/76af2941bbad7577",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Web-TG20240612-0149",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "aws_lb_target_group/web-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_lb_target_group/web-tg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.elb.data.aws_vpc.hellowaws-vpc",
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.aws_security_group.redis-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-0599efdd51acd889c",
            "description": "Protocol Type MySQL/Aurora",
            "filter": [
              {
                "name": "group-id",
                "values": [
                  "sg-0599efdd51acd889c"
                ]
              }
            ],
            "id": "sg-0599efdd51acd889c",
            "name": "database-sg:20240612-0250",
            "tags": {
              "Name": "aws_security_group/database-sg",
              "createDate": "20240612-0250",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_subnet",
      "name": "db-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-073eb007b783de4ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "available_ip_address_count": 248,
            "cidr_block": "10.60.20.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "aws_subnet/db-subnet1"
                ]
              }
            ],
            "id": "subnet-073eb007b783de4ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "aws_subnet/db-subnet1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_subnet",
      "name": "db-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-06ab15188d1adff58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.60.21.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "aws_subnet/db-subnet2"
                ]
              }
            ],
            "id": "subnet-06ab15188d1adff58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "aws_subnet/db-subnet2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          }
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "data",
      "type": "aws_vpc",
      "name": "hellowaws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:vpc/vpc-0572e446a81c51fd6",
            "cidr_block": "10.60.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b68d1599bef88da6",
                "cidr_block": "10.60.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-07144a5022c83121e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "aws_vpc/hellowaws-vpc"
                ]
              }
            ],
            "id": "vpc-0572e446a81c51fd6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-096b92ba15276300f",
            "owner_id": "891377163278",
            "tags": {
              "Name": "aws_vpc/hellowaws-vpc",
              "createDate": "20240612",
              "owner": "ktd-admin"
            }
          }
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-0dfb7d14a1b4d1c1e",
            "description": "Allow HTTP and HTTPS for World",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfb7d14a1b4d1c1e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bae26db62b64e41b"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bae26db62b64e41b"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-elb-sg:20240612-0250",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/app-elb-sg",
              "createDate": "20240612-0250",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/app-elb-sg",
              "createDate": "20240612-0250",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "15f6f72d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-04a02493af44eb391",
            "description": "Allow HTTP and HTTPS for World",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a02493af44eb391",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d410184cdae8a438"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d410184cdae8a438"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-elb-sg:20240612-0148",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/app-elb-sg",
              "createDate": "20240612-0148",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/app-elb-sg",
              "createDate": "20240612-0148",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "8156a9b8",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-00e713179bc9c5098",
            "description": "Allow HTTP and HTTPS for World",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e713179bc9c5098",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077f0d94177e03422"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077f0d94177e03422"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-elb-sg:20240612-0207",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/app-elb-sg",
              "createDate": "20240612-0207",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/app-elb-sg",
              "createDate": "20240612-0207",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "8b8f2f79",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-029139d098713226d",
            "description": "Allow HTTP and HTTPS for World",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029139d098713226d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b6ae3bcfd6b0c15"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b6ae3bcfd6b0c15"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-elb-sg:20240612-0236",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/app-elb-sg",
              "createDate": "20240612-0236",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/app-elb-sg",
              "createDate": "20240612-0236",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-tier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-09f467cd598d5d99d",
            "description": "Allow HTTP and HTTPS from APP elb Only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f467cd598d5d99d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dfb7d14a1b4d1c1e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dfb7d14a1b4d1c1e"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-tier-sg:20240612-0250",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/app-tier-sg",
              "createDate": "20240612-0250",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/app-tier-sg",
              "createDate": "20240612-0250",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "2f0fd827",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-0e447d87dd5f83edb",
            "description": "Allow HTTP and HTTPS from APP elb Only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e447d87dd5f83edb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04a02493af44eb391"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04a02493af44eb391"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-tier-sg:20240612-0148",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/app-tier-sg",
              "createDate": "20240612-0148",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/app-tier-sg",
              "createDate": "20240612-0148",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "43a212d7",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-081ff59314b94eb8e",
            "description": "Allow HTTP and HTTPS from APP elb Only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081ff59314b94eb8e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-029139d098713226d"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-029139d098713226d"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-tier-sg:20240612-0236",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/app-tier-sg",
              "createDate": "20240612-0236",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/app-tier-sg",
              "createDate": "20240612-0236",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "5fb4675e",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-03f0639abae3db851",
            "description": "Allow HTTP and HTTPS from APP elb Only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f0639abae3db851",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e713179bc9c5098"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e713179bc9c5098"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-tier-sg:20240612-0207",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/app-tier-sg",
              "createDate": "20240612-0207",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/app-tier-sg",
              "createDate": "20240612-0207",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-05cdfcf9e74c519c3",
            "description": "Allow SSH, HTTP and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05cdfcf9e74c519c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bastion-sg:20240612-0250",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/bastion-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/bastion-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "1ebc5d49",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-058676b8b66ead834",
            "description": "Allow SSH, HTTP and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058676b8b66ead834",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bastion-sg:20240612-0148",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/bastion-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/bastion-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "66aa58da",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-08d3a5802ba1e59ac",
            "description": "Allow SSH, HTTP and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d3a5802ba1e59ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bastion-sg:20240612-0207",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/bastion-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/bastion-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "9a31a718",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-093a7891ef0049af5",
            "description": "Allow SSH, HTTP and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093a7891ef0049af5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bastion-sg:20240612-0236",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/bastion-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/bastion-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-0599efdd51acd889c",
            "description": "Protocol Type MySQL/Aurora",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0599efdd51acd889c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05cdfcf9e74c519c3"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f467cd598d5d99d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg:20240612-0250",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/database-sg",
              "createDate": "20240612-0250",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/database-sg",
              "createDate": "20240612-0250",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "31d3ac8a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-00eba116060de07f4",
            "description": "Protocol Type MySQL/Aurora",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00eba116060de07f4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-058676b8b66ead834"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e447d87dd5f83edb"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg:20240612-0149",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/database-sg",
              "createDate": "20240612-0149",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/database-sg",
              "createDate": "20240612-0149",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "44f674a0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-0e04aec5ce890bfd2",
            "description": "Protocol Type MySQL/Aurora",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e04aec5ce890bfd2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-081ff59314b94eb8e"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-093a7891ef0049af5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg:20240612-0236",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/database-sg",
              "createDate": "20240612-0236",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/database-sg",
              "createDate": "20240612-0236",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "5679284b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-07a129aa6e4612f07",
            "description": "Protocol Type MySQL/Aurora",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a129aa6e4612f07",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f0639abae3db851"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d3a5802ba1e59ac"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg:20240612-0207",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/database-sg",
              "createDate": "20240612-0207",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/database-sg",
              "createDate": "20240612-0207",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.bastion-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-07ca7b0d7992f3c79",
            "description": "Security group for Redis Serverless",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ca7b0d7992f3c79",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f467cd598d5d99d"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-sg:20240612-0250",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/redis-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/redis-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "1f125ee2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-0940790c061417d4a",
            "description": "Security group for Redis Serverless",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0940790c061417d4a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-081ff59314b94eb8e"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-sg:20240612-0236",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/redis-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/redis-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "431eff87",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-04d8bbf8b887d905b",
            "description": "Security group for Redis Serverless",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d8bbf8b887d905b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f0639abae3db851"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-sg:20240612-0207",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/redis-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/redis-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "9b3442d4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-015e6a2139f7e43d5",
            "description": "Security group for Redis Serverless",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015e6a2139f7e43d5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e447d87dd5f83edb"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-sg:20240612-0149",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/redis-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/redis-sg",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.app-elb-sg",
            "module.security-group.aws_security_group.app-tier-sg",
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.aws_security_group.web-tier-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-01bc9587271ce8a19",
            "description": "Allow HTTP and HTTPS for World",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01bc9587271ce8a19",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-elb-sg:20240612-0250",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/web-elb-sg",
              "createDate": "20240612-0250",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/web-elb-sg",
              "createDate": "20240612-0250",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "58387f8a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-07b57629018acb753",
            "description": "Allow HTTP and HTTPS for World",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b57629018acb753",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-elb-sg:20240612-0207",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/web-elb-sg",
              "createDate": "20240612-0207",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/web-elb-sg",
              "createDate": "20240612-0207",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "5c522fb0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-0c30a272fcb461670",
            "description": "Allow HTTP and HTTPS for World",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c30a272fcb461670",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-elb-sg:20240612-0148",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/web-elb-sg",
              "createDate": "20240612-0148",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/web-elb-sg",
              "createDate": "20240612-0148",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "617987c0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-0012863cd4f62bf40",
            "description": "Allow HTTP and HTTPS for World",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0012863cd4f62bf40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-elb-sg:20240612-0236",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/web-elb-sg",
              "createDate": "20240612-0236",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/web-elb-sg",
              "createDate": "20240612-0236",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-tier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-0bae26db62b64e41b",
            "description": "Allow HTTP and HTTPS for WEP elb Only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bae26db62b64e41b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01bc9587271ce8a19"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01bc9587271ce8a19"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-tier-sg:20240612-0250",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/web-tier-sg",
              "createDate": "20240612-0250",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/web-tier-sg",
              "createDate": "20240612-0250",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "221732db",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-0d410184cdae8a438",
            "description": "Allow HTTP and HTTPS for WEP elb Only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d410184cdae8a438",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c30a272fcb461670"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c30a272fcb461670"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-tier-sg:20240612-0148",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/web-tier-sg",
              "createDate": "20240612-0148",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/web-tier-sg",
              "createDate": "20240612-0148",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "6cb5da17",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-06b6ae3bcfd6b0c15",
            "description": "Allow HTTP and HTTPS for WEP elb Only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b6ae3bcfd6b0c15",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0012863cd4f62bf40"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0012863cd4f62bf40"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-tier-sg:20240612-0236",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/web-tier-sg",
              "createDate": "20240612-0236",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/web-tier-sg",
              "createDate": "20240612-0236",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "db4cd4da",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:security-group/sg-077f0d94177e03422",
            "description": "Allow HTTP and HTTPS for WEP elb Only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077f0d94177e03422",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07b57629018acb753"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07b57629018acb753"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-tier-sg:20240612-0207",
            "name_prefix": "",
            "owner_id": "891377163278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group/web-tier-sg",
              "createDate": "20240612-0207",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_security_group/web-tier-sg",
              "createDate": "20240612-0207",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.web-elb-sg",
            "module.security-group.data.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.db-rt-association1",
            "module.vpc.aws_route_table_association.db-rt-association2",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.aws_vpc_endpoint.s3-gateway",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03dd50f4a7fdee393",
            "association_id": "eipassoc-0641869950b4e9937",
            "domain": "vpc",
            "id": "eipalloc-03dd50f4a7fdee393",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0baa7a63cd0439600",
            "private_dns": "ip-10-60-0-99.ca-central-1.compute.internal",
            "private_ip": "10.60.0.99",
            "public_dns": "ec2-15-157-135-224.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.157.135.224",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "aws_eip/eip1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_eip/eip1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095dad763644b6fb6",
            "association_id": "eipassoc-01ebfba8b48560dc4",
            "domain": "vpc",
            "id": "eipalloc-095dad763644b6fb6",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0bfea928ca4c28751",
            "private_dns": "ip-10-60-1-122.ca-central-1.compute.internal",
            "private_ip": "10.60.1.122",
            "public_dns": "ec2-35-183-218-160.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.183.218.160",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "aws_eip/eip2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_eip/eip2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:internet-gateway/igw-0498f6dfc53b746f3",
            "id": "igw-0498f6dfc53b746f3",
            "owner_id": "891377163278",
            "tags": {
              "Name": "aws_internet_gateway/igw",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_internet_gateway/igw",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hellowaws-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03dd50f4a7fdee393",
            "association_id": "eipassoc-0641869950b4e9937",
            "connectivity_type": "public",
            "id": "nat-005f2c66251b0e295",
            "network_interface_id": "eni-0baa7a63cd0439600",
            "private_ip": "10.60.0.99",
            "public_ip": "15.157.135.224",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06f87dcd78cd87423",
            "tags": {
              "Name": "aws_nat_gateway/ngw1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_nat_gateway/ngw1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095dad763644b6fb6",
            "association_id": "eipassoc-01ebfba8b48560dc4",
            "connectivity_type": "public",
            "id": "nat-07b497697780290ae",
            "network_interface_id": "eni-0bfea928ca4c28751",
            "private_ip": "10.60.1.122",
            "public_ip": "35.183.218.160",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-003dc583c86d18f91",
            "tags": {
              "Name": "aws_nat_gateway/ngw2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_nat_gateway/ngw2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:route-table/rtb-031df8317e41d118c",
            "id": "rtb-031df8317e41d118c",
            "owner_id": "891377163278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07b497697780290ae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws_route_table/db-rt1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_route_table/db-rt1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:route-table/rtb-0cabc1803ffe52103",
            "id": "rtb-0cabc1803ffe52103",
            "owner_id": "891377163278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07b497697780290ae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws_route_table/db-rt2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_route_table/db-rt2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:route-table/rtb-03166253db6233005",
            "id": "rtb-03166253db6233005",
            "owner_id": "891377163278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-005f2c66251b0e295",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws_route_table/private-rt1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_route_table/private-rt1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:route-table/rtb-0235fe1253beddf9f",
            "id": "rtb-0235fe1253beddf9f",
            "owner_id": "891377163278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07b497697780290ae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws_route_table/private-rt2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_route_table/private-rt2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:route-table/rtb-0401da23657fff048",
            "id": "rtb-0401da23657fff048",
            "owner_id": "891377163278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0498f6dfc53b746f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws_route_table/public-rt",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_route_table/public-rt",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-rt-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e991d658e1878fb2",
            "route_table_id": "rtb-031df8317e41d118c",
            "subnet_id": "subnet-073eb007b783de4ef"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet1",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-rt-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bbf6246b9ad79e3",
            "route_table_id": "rtb-0cabc1803ffe52103",
            "subnet_id": "subnet-06ab15188d1adff58"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.db-subnet2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9e50e4fe268b248",
            "route_table_id": "rtb-03166253db6233005",
            "subnet_id": "subnet-0c68e495a0037c195"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086265595a6c709dd",
            "route_table_id": "rtb-0235fe1253beddf9f",
            "subnet_id": "subnet-0bbb71f2b91294b95"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04aa85011e2c80e8c",
            "route_table_id": "rtb-0401da23657fff048",
            "subnet_id": "subnet-06f87dcd78cd87423"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6b014d424c2e642",
            "route_table_id": "rtb-0401da23657fff048",
            "subnet_id": "subnet-003dc583c86d18f91"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-073eb007b783de4ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.60.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073eb007b783de4ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_subnet/db-subnet1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_subnet/db-subnet1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-06ab15188d1adff58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.60.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ab15188d1adff58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_subnet/db-subnet2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_subnet/db-subnet2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-0c68e495a0037c195",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.60.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c68e495a0037c195",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_subnet/private-subnet1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_subnet/private-subnet1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-0bbb71f2b91294b95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.60.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbb71f2b91294b95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_subnet/private-subnet2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_subnet/private-subnet2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-06f87dcd78cd87423",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.60.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f87dcd78cd87423",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_subnet/public-subnet1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_subnet/public-subnet1",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:subnet/subnet-003dc583c86d18f91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.60.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003dc583c86d18f91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377163278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_subnet/public-subnet2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_subnet/public-subnet2",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hellowaws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:vpc/vpc-0572e446a81c51fd6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.60.0.0/16",
            "default_network_acl_id": "acl-01dfea790107c26fb",
            "default_route_table_id": "rtb-096b92ba15276300f",
            "default_security_group_id": "sg-055f1d1bbf51a0e8b",
            "dhcp_options_id": "dopt-07144a5022c83121e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0572e446a81c51fd6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096b92ba15276300f",
            "owner_id": "891377163278",
            "tags": {
              "Name": "aws_vpc/hellowaws-vpc",
              "createDate": "20240612",
              "owner": "ktd-admin"
            },
            "tags_all": {
              "Name": "aws_vpc/hellowaws-vpc",
              "createDate": "20240612",
              "owner": "ktd-admin"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:vpc-endpoint/vpce-0de63856e0d8f6234",
            "cidr_blocks": [
              "16.12.4.0/23",
              "3.5.252.0/22",
              "52.95.190.0/24",
              "52.95.146.0/23",
              "52.95.145.0/24"
            ],
            "id": "vpce-0de63856e0d8f6234",
            "owner_id": "891377163278",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7da54014",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0235fe1253beddf9f",
              "rtb-03166253db6233005",
              "rtb-031df8317e41d118c",
              "rtb-0cabc1803ffe52103"
            ],
            "service_name": "com.amazonaws.ca-central-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0572e446a81c51fd6"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip1",
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw1",
            "module.vpc.aws_nat_gateway.ngw2",
            "module.vpc.aws_route_table.db-rt1",
            "module.vpc.aws_route_table.db-rt2",
            "module.vpc.aws_route_table.private-rt1",
            "module.vpc.aws_route_table.private-rt2",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_route_table_association.private-rt-association1",
            "module.vpc.aws_route_table_association.private-rt-association2",
            "module.vpc.aws_route_table_association.public-rt-association2",
            "module.vpc.aws_subnet.private-subnet1",
            "module.vpc.aws_subnet.private-subnet2",
            "module.vpc.aws_subnet.public-subnet1",
            "module.vpc.aws_subnet.public-subnet2",
            "module.vpc.aws_vpc.hellowaws-vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcflowlog",
      "mode": "data",
      "type": "aws_vpc",
      "name": "hellowaws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:891377163278:vpc/vpc-0572e446a81c51fd6",
            "cidr_block": "10.60.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b68d1599bef88da6",
                "cidr_block": "10.60.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-07144a5022c83121e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "aws_vpc/hellowaws-vpc"
                ]
              }
            ],
            "id": "vpc-0572e446a81c51fd6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-096b92ba15276300f",
            "owner_id": "891377163278",
            "tags": {
              "Name": "aws_vpc/hellowaws-vpc",
              "createDate": "20240612",
              "owner": "ktd-admin"
            }
          }
        }
      ]
    }
  ]
}